cmake_minimum_required(VERSION 3.11)
project(naga_rpg)
set(CMAKE_CXX_STANDARD 17)
find_package(raylib QUIET)
if (NOT raylib_FOUND)
  include(FetchContent)
  FetchContent_Declare(raylib URL https://github.com/raysan5/raylib/archive/refs/tags/5.0.tar.gz)
  FetchContent_MakeAvailable(raylib)
endif()
add_executable(naga_rpg naga_rpg.cpp)
target_link_libraries(naga_rpg raylib)
